Bug 7693 - clear screen button misaligned
This patch removes firefox specific lines in the css which were breaking the display


This fixes the layout problem in current versions of Firefox. I think
the CSS which is removed by this patch might be necessary for older
versions of Firefox, but if this turns out to be a problem we can
follow up.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -2076,18 +2076,11 @@ fieldset.rows+h3 {clear:both;padding-top:.5em;}
     }
 
 #clearscreen {
-    margin-right: 0;
     position: absolute;
     top:0;
     right:0;
     }
-/* CSS Hack to target Firefox */
-@-moz-document url-prefix() {
-    #clearscreen {
-        margin-right : 1em;
-        top: -1em;
-    }
-}
+
 #clearscreen a {
     display:block;
     -moz-border-radius: 0 0 0 5px;
